fixing carousel images distortion

--- a/src/styles/_components.scss
+++ b/src/styles/_components.scss
@@ -43,6 +43,7 @@
     .carousel-item {
       img {
         height: 60vh;
+        object-fit: cover;
       }
     }
   }
